@startuml er

Entity user{
    + id: INT [PK]
    --
    username: String
    account_name: String
    password: String
    email: String
    email_verified: bool
    created_at: Datetime
    updated_at: Datetime
}

Entity profile{
    + id: INT [PK]
    --
    # user_id: INT [FK]
    age: INT
    location: String
    description: String
    profile_image_path: String
    extension: string
    created_at: Datetime
    updated_at: Datetime
}

Entity post{
    + id: INT [PK]
    --
    # user_id: INT [FK]
    content: String
    url: String
    media_path: String
    scheduled_at: Datetime
    created_at: Datetime
    updated_at: Datetime
}

Entity comment{
    + id: INT [PK]
    --
    # user_id: INT [FK]
    # post_id: INT [FK]
    # parent_comment_id: INT [FK]
    content: String
    url: String
    media_path: String
    created_at: Datetime
    updated_at: Datetime
}

Entity post_like{
    + user_id: INT [PK-FK]
    + post_id: INT [PK-FK]
    --
    created_at: Datetime
}

Entity comment_like{
    + user_id: INT [PK-FK]
    + comment_id: INT [PK-FK]
    --
    created_at: Datetime
}

Entity notification{
    + id: INT [PK]
    --
    # user_id: INT [FK]
    # source_id: INT [FK]
    # post_id: INT [FK]
    # comment_id: INT [FK]
    # dm_thread_id: INT [FK]
    notification_type: String
    is_read: bool
    created_at: Datetime
    updated_at: Datetime
}

Entity follow{
    + following_user_id: INT [PK-FK]
    + follower_user_id: INT [PK-FK]
    --
    created_at: Datetime
}

Entity dm_thread{
    + id: INT [PK]
    --
    # user_id1: INT [FK]
    # user_id2: INT [FK]
    url: String
}

Entity dm_message{
    + id: INT [PK]
    --
    # dm_thread_id: INT [FK]
    # sender_user_id: INT [FK]
    # receiver_user_id: INT [FK]
    message: blob
    iv: blob
    created_at: Datetime
}

Entity password_reset_token{
    + id: INT [PK]
    --
    # user_id: INT [FK]
    token: String
    created_at: Datetime
}


user ||--o{ post: writes
user ||--o{ comment: comment
post ||--o{ comment: has
post ||--o{ post_like: has
comment ||--o{ comment_like: has
comment ||--o{ comment: has
user ||--o{ follow: following
user ||--o{ follow: be followed
user ||--o{ notification: notices
notification ||--o{ post: belongs to
notification ||--o{ comment: belongs to
notification ||--o{ dm_thread: belongs to
user ||--o{ post_like: likes
user ||--o{ comment_like: likes
user ||--|| profile: has
user }|--o{ dm_thread: has
dm_thread ||--o{ dm_message: has
user ||--o{ password_reset_token: has
user ||--o{ dm_message: send
user ||--o{ dm_message: receive

@enduml